# django_deploy_hw

./: Dockerfile  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
