[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["user <763997@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
django-filter = "^24.2"
asgiref = "^3.8.1"
django-debug-toolbar = "^4.4.2"
pillow = "^10.3.0"
pytz = "^2024.1"
sqlparse = "^0.5.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
